# trilogy-public-models

./: .gitignore  README.md  genus_data.csv  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: pythonpackage.yml  pythonpublish.yml  refresh-data.yml
examples/bigquery/age_of_empires_2/: basic_example.preql
examples/bigquery/google_search_trends/: football.preql
examples/bigquery/hacker_news/: day_of_week_analysis.preql  worst_show_days.preql  worst_show_git_language.preql  (+3 more)
examples/ncaa_basketball/: README.md
examples/nyc_citibikes/: README.md
local_examples/: aoe2.py  aoe2_name.py  chicago_crime.py  concepts.txt  debug_the_look.py  fcc_political_ads.py  imports.py  nyc_citibikes.ipynb  profiling  program.prof  stack_overflow.py  thelook_ecommerce.ipynb  thelook_ecommerce.py  titanic-test.py  tpc-ds-test.py  tpc-h-test.py
scripts/: apply_cors.py  bulk_validation.py  cleaner.py  cors.json
scripts/aoe2/: aoe_to_bigquery.py  load_aoe2_object_info.py  load_aoe_data.py  load_raw.py
scripts/parquet/: ingest_csv_to_gcs.py
scripts/tooling/: find_interesting_datasets.py  parse_bigquery_project.py
scripts/wikimedia_ingest/: structured_fetch.py
studio/: README.md  __pycache__.json  age_of_empires_2.json  bike_data.json  build.py  chicago_crime.json  chinook.json  crypto.json  demo-model.json  faa.json  fcc_political_ads.json  gcat_space.json  github.json  google_search_trends.json  hacker_news.json  index.json  iris_data.json  mobs.json  mortality.json  ncaa_basketball.json  new_york_citibike.json  norway_transit.json  open_street_map.json  sf_trees.json  stack_overflow.json  tasty_btes.json  tasty_bytes.json  the_look.json  thelook_ecommerce.json  titanic.json  tpc_ds.json  tpc_h.json  usa_names.json
tests/: __init__.py  conftest.py  test_basic_structure.py  test_duckdb_setup.py  test_examples.py  test_models.py
trilogy_public_models/: __init__ copy.py  __init__.py  discovery.py  inventory.py  main.py  models.py  validator.py
trilogy_public_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
trilogy_public_models/tooling/: find_interesting_datasets.py  parse_bigquery_project.py
(+331 files in other folders)
