[project]
name = "trilogy_public_models"
version = "0.1.0"

[tool.mypy]
disable_error_code = ["import-untyped"]


[[tool.mypy.overrides]]
module = ["trilogy_public_models.*"]
ignore_missing_imports = true

[tool.setuptools.dynamic]
description = {file = ["DESCRIPTION.txt"]}  # or just set it directly below
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}