[project]
name = "trilogy-public-models"
dynamic = ["version", "description", "dependencies"]
readme = {file = "README.md", content-type = "text/markdown"}
description = "Rich set of open data models for use with Trilogy"

[tool.mypy]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["trilogy_public_models.*"]
ignore_missing_imports = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "trilogy_public_models.__version__"}